annotation and comment padding fixed border on comment removed edit and delete buttons aligned to right delete buttons’ colours changed to red tag buttons’ are separated

--- a/m/www/css/style.css
+++ b/m/www/css/style.css
@@ -50,6 +50,7 @@ ion-content {
     text-align: center;
     vertical-align: baseline;
     white-space: nowrap;
+    margin-right: 2px;
 }
 
 .label-info {
@@ -65,4 +66,8 @@ body .overflow-scroll {
 .activeTag {
     background-color: #ffc900;
     font-size: 90%;
+}
+
+blockquote{
+    margin:0;
 }
